--- a/dynamic-server/index.html
+++ b/dynamic-server/index.html
@@ -5,9 +5,9 @@
     <title>Title</title>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
 </head>
-<body>
+<body class="container" style="margin-top: 50px">
 <div class="panel panel-default">
-    <div class="panel-default">
+    <div class="panel-heading">
         <button class="btn btn-primary">增加</button>
     </div>
     <div class="panel-body">
@@ -27,6 +27,7 @@
 
 </div>
 </body>
-<script src="/lib/jquery/dist/jquery.js"></script>
-<script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+<script src="lib/jquery/dist/jquery.js"></script>
+<script src="lib/bootstrap/dist/js/bootstrap.js"></script>
+<script src="index.js"></script>
 </html>
