--- a/dynamic-server/index.html
+++ b/dynamic-server/index.html
@@ -19,7 +19,7 @@
                     <td>操作</td>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="userList">
 
             </tbody>
         </table>
