--- a/dynamic-server/index.html
+++ b/dynamic-server/index.html
@@ -24,8 +24,33 @@
             </tbody>
         </table>
     </div>
-
 </div>
+
+<div class="modal fade">
+    <div class="modal-dialog">
+        <form class="form-horizontal">
+            <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">保存用户</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label class="control-label col-xs-2" for="name">用户名</label>
+                    <div class="col-xs-10">
+                        <input type="text" class="form-control" id="name" name="name">
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div><!-- /.modal-content -->
+        </form>
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 </body>
 <script src="lib/jquery/dist/jquery.js"></script>
 <script src="lib/bootstrap/dist/js/bootstrap.js"></script>
