--- a/dynamic-server/index.html
+++ b/dynamic-server/index.html
@@ -8,7 +8,7 @@
 <body class="container" style="margin-top: 50px">
 <div class="panel panel-default">
     <div class="panel-heading">
-        <button class="btn btn-primary">增加</button>
+        <button class="btn btn-primary" onclick="add()">增加</button>
     </div>
     <div class="panel-body">
         <table class="table table-responsive">
@@ -26,7 +26,7 @@
     </div>
 </div>
 
-<div class="modal fade">
+<div class="modal fade" id="userModal">
     <div class="modal-dialog">
         <form class="form-horizontal">
             <div class="modal-content">
@@ -43,8 +43,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary">保存</button>
             </div>
         </div><!-- /.modal-content -->
         </form>
