--- a/dynamic-server/index.html
+++ b/dynamic-server/index.html
@@ -36,7 +36,7 @@
                 <h4 class="modal-title">保存用户</h4>
             </div>
             <div class="modal-body">
-                <input type="text" id="userId">
+                <input type="hidden" id="userId">
                 <div class="form-group">
                     <label class="control-label col-xs-2" for="name">用户名</label>
                     <div class="col-xs-10">
