--- a/dynamic-server/index.html
+++ b/dynamic-server/index.html
@@ -7,9 +7,22 @@
 </head>
 <body class="container" style="margin-top: 50px">
 <div class="alert alert-warning text-center" role="alert" id="alert"></div>
+<div class="row">
+    <div class="col-xs-2">过滤条件</div>
+    <div class="col-xs-10">
+        <input id="keyword" type="text" class="form-control">
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-offset-2">
+        <button class="btn btn-primary" onclick="list()">搜索</button>
+    </div>
+</div>
 <div class="panel panel-default">
     <div class="panel-heading">
-        <button class="btn btn-primary" onclick="add()">增加</button>
+        <button class="btn btn-primary btn-lg" onclick="add()">增加</button>
+
+
     </div>
     <div class="panel-body">
         <table class="table table-responsive">
