--- a/dynamic-server/index.html
+++ b/dynamic-server/index.html
@@ -8,16 +8,34 @@
 <body class="container" style="margin-top: 50px">
 <div class="alert alert-warning text-center" role="alert" id="alert"></div>
 <div class="row">
-    <div class="col-xs-2">过滤条件</div>
-    <div class="col-xs-10">
-        <input id="keyword" type="text" class="form-control">
+    <div class="form-group">
+        <label class="col-xs-2" for="keyword">过滤条件</label>
+        <div class="col-xs-10">
+            <input id="keyword" type="text" class="form-control">
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-xs-offset-2">
-        <button class="btn btn-primary" onclick="list()">搜索</button>
+    <div class="form-group">
+        <div class="col-xs-6">
+            <select class="form-control" name="orderBy" id="orderBy">
+                <option value="id">ID</option>
+                <option value="name">名称</option>
+            </select>
+        </div>
+        <div class="col-xs-6">
+            <select class="form-control" name="order" id="order">
+                <option value="asc">升序</option>
+                <option value="desc">降序</option>
+            </select>
+        </div>
     </div>
+    <div class="form-group">
+        <div class="col-xs-offset-2">
+            <button class="btn btn-primary" onclick="list()">搜索</button>
+        </div>
+    </div>
+
 </div>
+
 <div class="panel panel-default">
     <div class="panel-heading">
         <button class="btn btn-primary btn-lg" onclick="add()">增加</button>
