--- a/dynamic-server/index.html
+++ b/dynamic-server/index.html
@@ -11,18 +11,18 @@
     <div class="form-group">
         <label class="col-xs-2" for="keyword">过滤条件</label>
         <div class="col-xs-10">
-            <input id="keyword" type="text" class="form-control">
+            <input onchange="init()" id="keyword" type="text" class="form-control">
         </div>
     </div>
     <div class="form-group">
         <div class="col-xs-6">
-            <select class="form-control" name="orderBy" id="orderBy">
+            <select onchange="init()" class="form-control" name="orderBy" id="orderBy">
                 <option value="id">ID</option>
                 <option value="name">名称</option>
             </select>
         </div>
         <div class="col-xs-6">
-            <select class="form-control" name="order" id="order">
+            <select onchange="init()" class="form-control" name="order" id="order">
                 <option value="asc">升序</option>
                 <option value="desc">降序</option>
             </select>
@@ -46,7 +46,7 @@
     </div>
     <div class="form-group">
         <div class="col-xs-offset-2">
-            <button class="btn btn-primary" onclick="list()">搜索</button>
+            <button class="btn btn-primary" onclick="init()">搜索</button>
         </div>
     </div>
 
