--- a/11.promise/ball.html
+++ b/11.promise/ball.html
@@ -26,26 +26,33 @@
 <div id="ball3" class="ball ball3" style="margin-left: 0"></div>
 </body>
 <script>
-    // ele 移动的DOM对象 target marginLeft目标位置 移动完成之后的回调
-    function move(element,target,cb){
-        setTimeout(function(){
-            var marginLeft = parseInt(element.style.marginLeft,10);
-            if(marginLeft<target){
-                marginLeft++;
-                element.style.marginLeft=marginLeft+'px';
-                move(element,target,cb);
-            }else{
-                cb&&cb();
+    function move(element,target) {
+        return new Promise(function (resolve,reject) {
+            function _move() {
+                setTimeout(function () {
+                    var marginLeft=parseInt(element.style.marginLeft,10);
+                    if(marginLeft<target){
+                        marginLeft+=2;
+                        element.style.marginLeft=marginLeft+'px';
+                        _move(element,target);
+                    }else {
+                        resolve();
+                    }
+                },13)
             }
-        },13);
-    }
-    var ball1 = document.querySelector('#ball1');
-    var ball2 = document.querySelector('#ball2');
-    var ball3 = document.querySelector('#ball3');
-    move(ball1,100,function(){
-        move(ball2,100,function(){
-            move(ball3,100);
+            _move();
         })
+    }
+    var div1=document.querySelector("#ball1");
+    var div2=document.querySelector("#ball2");
+    var div3=document.querySelector("#ball3");
+
+    move(div1,100)
+    .then(function () {
+        return move(div2,100)
+    }).then(function () {
+        return move(div3,100);
     });
+
 </script>
 </html>
